@@ -102,3 +102,4 @@
  9-May-2024 V1.2  Adjust provider type exclusion input to accept a list of types
 13-May-2024 V1.21 Update requirements; fix linting
 17-Jul-2024 V1.22 Adjust LigandNeighborMappingExtractor
+20-Aug-2024 V1.23 Add support for target cofactor data loading
